# pc-ble-driver-webusb

./: .gitmodules  .npmignore  CMakeLists.txt  README.md  build-js.bat  build-link.bat  build.py  package.json
clang-bindings/: createBindings.py
clang-parameter-structs/: clangParse.py  run.py
clangCreateBindings/: create.py
clangCreateBindings/parameterStructs/: clangParse.py  run.py  structSerialization.py
clangCreateBindings/parseStruct/: clangParse.py  generateCode.py  nodes.py  run.py
clangCreateBindings/sdEncodeDecode/: createBindings.py
cmake/: pc-ble-driver.cmake
examples/dfu/sd_v3/: deviceScanner.js  dfu.js  index.html  index.js
examples/dfu/sd_v3/dfu/: transport.js
examples/dfu/sd_v3/dfu/bleTransport/: controlPointService.js  notificationQueue.js  objectWriter.js  packetWriter.js
examples/dfu/sd_v3/react-dfu/: package-lock.json  package.json  pc_ble_driver_sd_api_v3.wasm
examples/dfu/sd_v3/react-dfu/public/: index.html  pc_ble_driver_sd_api_v3.js
examples/dfu/sd_v3/react-dfu/src/: App.js  deviceScanner.js  dfu.js  index.js  pc_ble_driver_sd_api_v3.js
examples/dfu/sd_v3/react-dfu/src/components/: deviceScannerComponent.js  dfuProgressComponent.js  openAdapterComponent.js
examples/dfu/sd_v3/react-dfu/src/dfu/: dfuModels.js  transport.js
examples/dfu/sd_v3/react-dfu/src/dfu/bleTransport/: buttonlessControlPointService.js  controlPointService.js  notificationQueue.js  objectWriter.js  packetWriter.js
examples/dfu/sd_v3/react-dfu/src/sdk/: adapter_internal.js  bundle.js  example.js  gattc.js  sd_rpc_types.js  securityContext.js
examples/dfu/sd_v3/react-dfu/src/sdk/bindings/: bleSDAttributeStructs.js  emscripten.js
examples/dfu/sd_v3/react-dfu/src/sdk/ble_impl/: ble_gap_impl.js  ble_gatts_impl.js
examples/dfu/sd_v3/react-dfu/src/sdk/transport/: h5.js  h5_transport.js  h5_transport_exit_criterias.js  serial.js  serialization_transport.js  slip.js  webusb_interface.js
examples/dfu/sd_v3/react-dfu/src/util/: uuid.js
examples/dfu/sd_v3/util/: intArrayConv.js  uuid.js
examples/gapConnect/: characteristic.js  index.html  interface.js  pc_ble_driver_sd_api_v3.js
experimental_connectivity_firmware/: README.md  nrf52840_xxaa.hex
parse-struct/: clangParse.py  generateCode.py  nodes.py  requirements.txt  run.py
src/js/: adapter_internal.js  ble_common.js  ble_impl.js  gattc.js  index.html  index.js  interface.js  pcbleblob.js  sd_rpc_types.js
src/js/bindings/: bleEvtStruct.js  bleSDAttributeStructs.js  emscripten.js  version.js
src/js/ble_evt/: ble.js
src/js/ble_impl/: ble_gap_impl.js  ble_gattc_impl.js  ble_gatts_impl.js  ble_impl.js  common.js
src/js/transport/: h5.js  h5_transport.js  h5_transport_exit_criterias.js  serial.js  serialization_transport.js  slip.js  transport.js  webusb_interface.js
src/mock/: app_ble_gap_sec_keys.cpp
src/sd_api_v3/bindings/: ble_attr_structs.cpp  ble_evt_struct.cpp  createParams.cpp  emscripten_bindings.cpp
